# dcloudc

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  clientapp.c  serverapp.c
include/client/: client.h
include/common/: conf.h  futil.h  tlv.h
include/device/: device.h
include/server/: server.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.c
src/common/: CMakeLists.txt  conf.c  futil.c  log.c  tlv.c
src/device/: CMakeLists.txt  device.c
src/server/: CMakeLists.txt  server.c
